add Hypothesis.script and fix some typo error

--- a/in_header.html
+++ b/in_header.html
@@ -7,3 +7,5 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 
 <meta name="google-site-verification" content="31axDkPIY8dHEU8wWjGoY71hZnVJIGAtWhtnVzV60Ns" />
+
+<script src="https://hypothes.is/embed.js" async></script>
